updated active status. hopefully it works.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -150,6 +150,12 @@ a {
   &:hover {
     color: #000;
     text-decoration: none;
+
+  &:active {
+    color: #000;
+    text-decoration: none;
+  }
+
   }
 
   .social-media-list &:hover {
