deleted redundant self-hosted font files, added site title (finally)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
+  <title>{{ site.title }} | {{ page.title }}</title>
   {%- include head.html -%}
 
   <body>
