--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-  <title>{{ site.title }} | {{ page.title }}</title>
+  <title>
+  {%- if page.title -%}
+    {{ site.title }} | {{ page.title }}
+  {%- else -%}
+    {{ site.title }}
+  {%- endif -%}
+  </title>
+
   {%- include head.html -%}
 
   <body>
