updated the default site title to jinyoung.xyz and it works with the liquid if conditional title block!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {%- if page.title -%}
     {{ site.title }} | {{ page.title }}
   {%- else -%}
-    {{ site.title }}
+    jinyoung.xyz
   {%- endif -%}
   </title>
 
