fixed up default title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {%- if page.title -%}
     {{ site.title }} | {{ page.title }}
   {%- else -%}
-    jinyoung.xyz
+    jinyoung choi | writer of code and prose
   {%- endif -%}
   </title>
 
