second draft of about html title. think i will settle with this for now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {%- if page.title -%}
     {{ site.title }} | {{ page.title }}
   {%- else -%}
-    jinyoung | code and prose
+    jinyoung | about
   {%- endif -%}
   </title>
 
