added a favicon to site

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,11 @@
   href="./fonts/offside-v8-latin-regular.woff2" crossorigin>
   <!-- end of self-hosted Google Fonts code -->
 
+  <!-- favicon! -->
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <!-- end of favicon -->
+
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
