--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,10 @@
   <!-- end of self-hosted Google Fonts code -->
 
   <!-- favicon! -->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <!-- end of favicon -->
 
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
