commented out GA

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
 
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
-  {%- endif -%}
+  <!-- {%- if jekyll.environment == 'production' and site.google_analytics -%} -->
+    <!-- {%- include google-analytics.html -%} -->
+  <!-- {%- endif -%} -->
 </head>
