--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <a class="nav-link" href="/journey">journey</a>
         <a class="nav-link" href="/longreads">longreads</a>
         <a class="nav-link" href="/dev">&lt;/&gt;</a>
-        <a class="tail-link" href="/gallery">photos</a>
+        <!-- <a class="tail-link" href="/gallery">photos</a> -->
 
     </ul>
 
