edited footer layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <data class="u-url" href="{{ "/" | relative_url }}"></data>
     <div class="wrapper">
             {%- if site.copyright -%}
-                <div class="copyright-note">| copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }} |</div>
+                <div class="copyright-note">copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }}</div>
             {%- endif -%}
             </div>
         {%- include social.html -%}
