--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         <!-- <a class="tail-link" href="/gallery">photos</a> -->
 
     </ul>
-
-
+<span class="js-weather"></span>
+<script src="weather.js"></script>
 </header>
 </div>
