weather api  finally incorporated!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,4 +29,5 @@
   <!-- {%- if jekyll.environment == 'production' and site.google_analytics -%} -->
     <!-- {%- include google-analytics.html -%} -->
   <!-- {%- endif -%} -->
+  <script src="./assets/js/weather.js" type="text/javascript"></script>
 </head>
