--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,8 @@
         <!-- <a class="tail-link" href="/gallery">photos</a> -->
 
     </ul>
-<span class="js-weather"></span>
-<script src="weather.js"></script>
+    <span class="js-weather"></span>
+<script src="/assets/js/config.js" type="module"></script>
+<script src="/assets/js/weather.js" type="module"></script>
 </header>
 </div>
