--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,8 +10,8 @@
         <!-- <a class="tail-link" href="/gallery">photos</a> -->
 
     </ul>
-    <span class="js-weather"></span>
-<script src="/assets/js/config.js" type="module"></script>
-<script src="/assets/js/weather.js" type="module"></script>
+    <span id="weather"></span>
+
 </header>
+<script src="./assets/js/weather.js" type="text/javascript" defer ></script>
 </div>
